Source/WebCore: REGRESSION: Soft hyphen is not always rendered https://bugs.webkit.org/show_bug.cgi?id=56017

Patch by David Sosby <dsosby@rim.com> on 2011-03-13
Reviewed by Dan Bernstein.

The check to flag a text block as hyphenated was only
occurring at break points in the line. If no break points
were found after the soft hyphen then the line would not
be flagged hyphenated. Adding a check for soft hyphen at
the end of the text run resolves the issue.

Test: fast/text/soft-hyphen-4.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::findNextLineBreak):

LayoutTests: Reviewed and tweaked by Dan Bernstein.

Patch by David Sosby <dsosby@rim.com> on 2011-03-13
REGRESSION: Soft hyphen is not always rendered
https://bugs.webkit.org/show_bug.cgi?id=56017

Adding new test that verifies soft hyphen is rendered
when it is the last breakable point in a line.

* fast/text/soft-hyphen-4-expected.checksum: Added.
* fast/text/soft-hyphen-4-expected.png: Added.
* fast/text/soft-hyphen-4-expected.txt: Added.
* fast/text/soft-hyphen-4.html: Added.



Canonical link: https://commits.webkit.org/70869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80984 268f45cc-cd09-0410-ab3c-d52691b4dbfc